14/6/2011:	v4.1.28
	- added 'preserve hpa' kernel entry (fate #311699)
	- updated VMware theme

15/10/2010:	v4.1.27
	- show real product name on serial console (bnc #634299)
	- use common gfxboot.cfg template for all themes

15/10/2010:	v4.1.26
	- update gfxboot script to HEAD (support latest syslinux & VirtualBox)
	- replace test scripts with HEAD version

5/7/2010:	v4.1.25
	- added VMware theme

26/3/2010:	v4.1.24
	- updated translations

10/12/2009:	v4.1.23
	- leave more room for timeout indicator (bnc #551718)
	- center main menu (bnc #562089)

6/2/2009:	v4.1.22
	- updated translations

26/1/2009:	v4.1.21
	- updated translations

12/1/2009:	v4.1.20
	- updated translations (bnc #458629, bnc #459169)

3/12/2008:	v4.1.19
	- now really update speech samples

2/12/2008:	v4.1.18
	- enabled penguin theme for openSUSE

1/12/2008:	v4.1.17
	- new texts for speech support (bnc #391313)

20/11/2008:	v4.1.16
	- translations, again (bnc #445350)

20/11/2008:	v4.1.15
	- updated translations (bnc #445350)

20/11/2008:	v4.1.14
	- updated translations
	- removed special livecd menu text replacements

12/11/2008:	v4.1.13
	- no beep in installed system (fate #303481)

7/11/2008:	v4.1.12
	- fixed 'portuguese' spelling (bnc #442407)

5/11/2008:	v4.1.11
	- all menus have speech support now
	- speech works with languages != english
	- in input lines the char at cursor position is spoken

4/11/2008:	v4.1.10
	- fix last livecd patch
	- can replace '_' with space in menu entries

4/11/2008:	v4.1.9
	- for livecds: don't switch to text mode with F9 (bnc #391313)

16/10/2008:	v4.1.8
	- new openSUSE theme

6/10/2008:	v4.1.7
	- updated SLES/SLED themes

29/9/2008:	v4.1.6
	- updated SLE themes

26/9/2008:	v4.1.5
	- translations updated

25/9/2008:	v4.1.4
	- added keyboard selection dialog (bnc #422175)

25/9/2008:	v4.1.3
	- better monitor detection (bnc #407786)
	- fix default video size selection (bnc #407786)

11/9/2008:	v4.1.2
	- support serial lines (fate #301595)

19/8/2008:	v4.1.1