@@ -1,3 +1,6 @@
+7/7/2011:	v4.1.29
+	- forgot to add gfxboot.cfg (bnc #703896)
+
 14/6/2011:	v4.1.28
 	- added 'preserve hpa' kernel entry (fate #311699)
 	- updated VMware theme
